# AusweisApp2-Omapi

resources/: ausweisapp.qrc
resources/packaging/android/: AndroidManifest.xml.apk.in  build.gradle.append
resources/qml/Governikus/ChangePinView/: ChangePinController.qml
resources/qml/Governikus/IdentifyView/+mobile/: IdentifyController.qml
resources/qml/Governikus/TechnologyInfo/+android/: TechnologySwitch.qml
resources/qml/Governikus/Workflow/: qmldir
resources/qml/Governikus/Workflow/+mobile/: GeneralWorkflow.qml  OmapiWorkflow.qml
resources/translations/: ausweisapp2_de.ts
src/: CMakeLists.txt  main.cpp
src/card/: CMakeLists.txt
src/card/base/: ReaderManagerPlugInInfo.h
src/card/omapi/: CMakeLists.txt  Omapi.java  OmapiCard.cpp  OmapiCard.h  OmapiCard.java  OmapiError.java  OmapiReader.cpp  OmapiReader.h  OmapiReader.java  OmapiReaderManagerPlugIn.cpp  OmapiReaderManagerPlugIn.h  metadata.json
src/card/omapi/impl/: OmapiImpl.java  OmapiJNI.java  OmapiReaderImpl.java  OmapiSecretFetcherImpl.java
src/core/states/: StateConnectCard.cpp  StateConnectCard.h  StateSelectReader.cpp
src/global/: LogCategories.cpp
